# c-_multi_threading_basics

./: .gitignore  CMakeLists.txt  vcpkg.json
include/cpu_querry/: Cpu.h  CpuParser.h  HttpClient.h  WikidataCpuRepository.h
src/: CpuParser.cpp  HttpClient.cpp  WikidataCpuRepository.cpp  main.cpp
